<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginTopBottom"
        android:layout_marginLeft="@dimen/marginLeftRight"
        android:layout_marginRight="@dimen/marginLeftRight"
        android:layout_marginTop="@dimen/marginTopBottom"
        card_view:cardBackgroundColor="@color/background"
        card_view:cardCornerRadius="@dimen/cornerRadius">

        <LinearLayout
            android:id="@+id/item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="@dimen/double_padding"
                android:scaleType="fitCenter"
                android:src="@drawable/thumbnail" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    style="@style/titleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    tools:text="@string/title" />

                <TextView
                    android:id="@+id/subtext"
                    style="@style/subtextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/description" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"></FrameLayout>

                <TextView
                    android:id="@+id/author"
                    style="@style/authorStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColorLink="@color/colorPrimaryDark"
                    tools:text="@string/author" />

                <TextView
                    android:id="@+id/editor"
                    style="@style/authorStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColorLink="@color/colorPrimaryDark"
                    tools:text="@string/editor" />


            </LinearLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>


</LinearLayout>